--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <div class="nav-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
         </div>
       </nav>
     </header>
@@ -65,16 +60,45 @@
                   >
                 </p>
 
+                <!-- Contact Information -->
+
                 <div class="contact-section">
                   <span class="section-title">Contact</span><br />
                   Email:
                   <a
+                    id="emailID"
                     href="mailto:alamin.sarker4241@gmail.com"
                     style="text-decoration: none"
                     >alamin.sarker4241@gmail.com</a
+                  >
+                  <button
+                    onclick="copyEmail()"
+                    title="Copy Email to Clipboard"
+                    style="border: none; background: none; cursor: pointer"
+                  >
+                    <i class="fas fa-copy" aria-label="copy email"></i></button
                   ><br />
+                  <br />
                   Phone: +8801740051568<br />
                   Location: Dhaka, Bangladesh
+                </div>
+
+                <!-- Toast Notification -->
+
+                <div
+                  id="toast"
+                  style="
+                    position: fixed;
+                    bottom: 20px;
+                    right: 20px;
+                    background: #333;
+                    color: #fff;
+                    padding: 10px;
+                    border-radius: 5px;
+                    display: none;
+                  "
+                >
+                  Email copied!
                 </div>
 
                 <div class="social-section" id="contact">
@@ -87,7 +111,7 @@
                     <i class="fab fa-github fa-2x" aria-label="github"></i>
                   </a>
                   <a
-                    href="https://linkedin.com/in/alamin-sarker"
+                    href="https://www.linkedin.com/in/alamin-sarker-b2676522a/"
                     target="_blank"
                     style="text-decoration: none"
                   >
@@ -179,6 +203,7 @@
               <div class="publication-item">
                 <h3>Publications</h3>
                 <div class="publication">
+                  <p class="research-supervisor">Supervisor:</p>
                   <p>
                     <strong>Manuscript in Preparation:</strong> Bangla Entity
                     Linking in Low-Resource and Noisy Text Settings
@@ -273,52 +298,23 @@
         </div>
       </div>
     </main>
-
-    <!-- Back to top button -->
-    <a
-      onclick="window.scrollTo(0, 0); return false;"
-      role="button"
-      class="back-to-top"
-      id="back-to-top"
-    >
-      <i class="fas fa-arrow-up"></i> Back to top
-    </a>
-
     <script>
-      // Mobile navigation toggle
-      const navToggle = document.querySelector(".nav-toggle");
-      const navMenu = document.querySelector(".nav-menu");
-
-      navToggle.addEventListener("click", () => {
-        navMenu.classList.toggle("active");
-        navToggle.classList.toggle("active");
-      });
-
-      // Smooth scrolling for navigation links
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            const headerHeight = document.querySelector(".header").offsetHeight;
-            const targetPosition = target.offsetTop - headerHeight - 20;
-            window.scrollTo({
-              top: targetPosition,
-              behavior: "smooth",
-            });
+      function copyEmail() {
+        const email = document.getElementById("emailID").textContent;
+        navigator.clipboard.writeText(email).then(
+          () => {
+            const toast = document.getElementById("toast");
+            toast.style.display = "block";
+            toast.style.position = "static";
+            setTimeout(() => {
+              toast.style.display = "none";
+            }, 2000);
+          },
+          (err) => {
+            console.error("Could not copy text: ", err);
           }
-        });
-      });
-
-      // Show/hide back to top button
-      window.addEventListener("scroll", function () {
-        const backToTop = document.getElementById("back-to-top");
-        if (window.pageYOffset > 300) {
-          backToTop.style.display = "block";
-        } else {
-          backToTop.style.display = "none";
-        }
-      });
+        );
+      }
     </script>
   </body>
 </html>
